--- a/html/workflow.html
+++ b/html/workflow.html
@@ -206,11 +206,13 @@
                         <div id='collapseOne' class='panel-collapse collapse in'>
                         <div class='panel-body'>
                         <ul class='list-group' ng-repeat="task in workflow.tasks">
-                            <li id="{{task._id}}" class="list-group-item">
+                            <li id="{{task._id}}" class="list-group-item task-box">
                                 <a href="#" class="task-link">
                                 <p>{{task.title}}</p>
                                 <p>{{task.description}}</p>
                                 <div>{{task.creator.username}}</div>
+                                <button type="button" class="btn btn-danger btn-md task-remove-button" ng-click="deleteTask(task._id, workflow)"><i class="glyphicon glyphicon-remove"></i></button>
+                                <button type="button" class="btn btn-info btn-md task-edit-button" ng-click="deleteTask(task._id, workflow)"><i class="glyphicon glyphicon-cog"></i></button>
                                 <span class="show-menu">
                                 <span class="glyphicon glyphicon-chevron-right" rel="tooltip" title="Tip 1"></span>
                                 </span>
