calendar icons added

--- a/html/boards.html
+++ b/html/boards.html
@@ -22,8 +22,9 @@
 							<ul class="dropdown-menu">
 								<li><a href="#">Profile</a></li>
 								<li><a href="#">Settings</a></li>
-								<li><a href="#">Logout</a></li>
+								<li><a ng-href="/login">Logout</a></li>
 								<li role="separator" class="divider"></li>
+								<li><a href="#">Separated link</a></li>
 							</ul>
 						</li>
 						<form class="navbar-form navbar-left" role="search">
