fixed workflow controller

--- a/html/workflow.html
+++ b/html/workflow.html
@@ -217,7 +217,7 @@
                                 <button type="button" class="btn btn-danger btn-md task-remove-button" ng-click="deleteTask(task._id, workflow)"><i class="glyphicon glyphicon-remove"></i></button>
                                 <button type="button" class="btn btn-info btn-md task-edit-button" ng-click="editTask(task, workflow)"><i class="glyphicon glyphicon-cog"></i></button>
                                 <button type="button" class="btn btn-info btn-md task-edit-button">50%</button>
-                                <button type="button" class="btn btn-default btn-md task-edit-button"><i class="glyphicon glyphicon-calendar"></i>  04/23/16</button>
+                                <button type="button" class="btn btn-success btn-md task-edit-button"><i class="glyphicon glyphicon-calendar"></i>  3wk</button>
                                 <span class="show-menu">
                                 <span class="glyphicon glyphicon-chevron-right" rel="tooltip" title="Tip 1"></span>
                                 </span>
